# lect

./: .gitignore  README.md  pyproject.toml
lect/: add.py  build.py  cli.py  util.py
lect/templates-latex/: default-section.tex  default.tex  lecture.tex  section.tex
tests/: test_lect.py
